--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Johan Garcia Alonso",
   "license": "ISC",
   "devDependencies": {
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
